--- a/app/views/rooms/show.html.slim
+++ b/app/views/rooms/show.html.slim
@@ -7,3 +7,7 @@ p
 => link_to 'Edit', edit_room_path(@room)
 '|
 =< link_to 'Back', rooms_path
+
+#messages = render @room.messages
+
+= link_to 'New Message', [:new, @room, :message]
