Let the create message form be loaded from room page inside a turbo-frame

--- a/app/views/rooms/show.html.slim
+++ b/app/views/rooms/show.html.slim
@@ -12,3 +12,5 @@ p#notice = notice
 #messages = render @room.messages
 
 = link_to 'New Message', [:new, @room, :message]
+
+= turbo_frame_tag :new_message, src: [:new, @room, :message], target: :_top
